<resources>
    <string name="app_name">ChatApp</string>
    <string name="text_warning_empty_email">Email not empty</string>
    <string name="text_warning_empty_password">Pass not empty</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="text_login">LogIn</string>
    <string name="text_signIn">SignIn</string>
    <string name="text_login_failed">Login Error</string>
    <string name="title_account">Account</string>
    <string name="title_messenger">Messenger</string>
    <string name="logout">Logout</string>
    <string name="hint_full_name">full name</string>
    <string name="hint_phone_number">phone number</string>
    <string name="text_warning_empty_fullName">full name not empty</string>
    <string name="text_warning_empty_phone">phone not empty</string>
    <string name="text_signIn_failed">SignIn Error</string>
    <string name="user_name">user name</string>
    <string name="title_friend">Friend</string>
    <string name="title_mess">Message</string>
</resources>
