<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".screens.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/with_image_100dp"
            android:layout_height="@dimen/height_image_100dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:src="@drawable/icon_app" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_16sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:hint="@string/hint_user_name"
            android:textSize="@dimen/text_size_16sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_16sp" />

        <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@drawable/bg_gradient_button"
            android:text="@string/text_login" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/bg_gradient_button"
            android:text="@string/text_signIn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
